@@ -6,6 +6,7 @@ ChangeLog for PyLint
     * include James Lingar patches for function call arguments checker
     * improved flymake code and doc provided by Derek Harland
     * refactor & fix the imports checker
+    * fix #18862: E0601 false positive with lambda functions
     * fix #8764: More than one statement on a single line false positive with
       try/except/finally
     * Nathaniel's fix for w0108 false positive
